[package]
name = "pfr-dl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"]}
hyper = { version = "0.14", features = ["full"]}
hyper-tls = "0.5"
scraper = "0.12"
regex = "1"
lazy_static = "1"
futures = "0.3"
csv-async = { version = "1", features = ["tokio"] }
structopt = "0.3"
clap = "2"